force-app/main/default/objects/Contact/fields/ZI_Ultimate_Parent_Company_ID__c.field-meta.xml
<CustomField>
    <fullName>ZI_Ultimate_Parent_Company_ID__c</fullName>
    <label>ZI Ultimate Parent Company ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>