force-app/main/default/objects/Contact/fields/ZI_Ultimate_Parent_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>ZI_Ultimate_Parent_Company_Name__c</fullName>
    <label>ZI Ultimate Parent Company Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>