force-app/main/default/objects/Contact/fields/zisf__Person_Has_Moved__c.field-meta.xml
<CustomField>
    <fullName>zisf__Person_Has_Moved__c</fullName>
    <description>Displays ZoomInfo Has Moved data point. Denotes whether the lead/contact has moved from the current company. Values are Yes, Uncertain, No.</description>
    <inlineHelpText>Displays ZoomInfo Has Moved data point. Denotes whether the lead/contact has moved from the current company. Values are Yes, Uncertain, No.</inlineHelpText>
    <label>Person Has Moved</label>
    <length>10</length>
    <type>Text</type>
</CustomField>