force-app/main/default/objects/Contact/fields/zisf__zoom_lastupdated__c.field-meta.xml
<CustomField>
    <fullName>zisf__zoom_lastupdated__c</fullName>
    <description>Last updated from ZoomInfo timestamp</description>
    <label>ZoomInfo Last Updated</label>
    <type>DateTime</type>
</CustomField>