force-app/main/default/objects/Contact/fields/zisf__ZoomInfo_Phone__c.field-meta.xml
<CustomField>
    <fullName>zisf__ZoomInfo_Phone__c</fullName>
    <description>ZoomInfo Phone for the Contact record.</description>
    <inlineHelpText>ZoomInfo Phone for the Contact record.</inlineHelpText>
    <label>ZoomInfo Phone</label>
    <length>30</length>
    <type>Text</type>
</CustomField>