force-app/main/default/objects/Contact/fields/Zoominfo_Ready_to_Clean__c.field-meta.xml
<CustomField>
    <fullName>Zoominfo_Ready_to_Clean__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Zoominfo Ready to Clean</label>
    <type>Checkbox</type>
</CustomField>