force-app/main/default/objects/Contact/validationRules/Email_cannot_be_blanked_out.validationRule-meta.xml
<ValidationRule>
    <fullName>Email_cannot_be_blanked_out</fullName>
    <active>true</active>
    <description>Email cannot be blanked out from previous email.</description>
    <errorConditionFormula>$Profile.Name &lt;&gt; &quot;System Administrator&quot; &amp;&amp; ISCHANGED( Email )  &amp;&amp;  Not(ISNEW()) &amp;&amp;  ISBLANK(Email) &amp;&amp; $Setup.rh2__PS_Settings__c.rh2__Run_Validation_Rule__c</errorConditionFormula>
    <errorMessage>Deletion of the email address is not permitted. However, you can insert or update email address to a valid email.</errorMessage>
</ValidationRule>