force-app/main/default/objects/Contact/validationRules/LID__Check_CompanyId_Value.validationRule-meta.xml
<ValidationRule>
    <fullName>LID__Check_CompanyId_Value</fullName>
    <active>true</active>
    <description>Throws an exception message if the company id contains non-numerics</description>
    <errorConditionFormula>AND(
	(LID__LinkedIn_Company_Id__c &lt;&gt; NULL),
	NOT(ISNUMBER(LID__LinkedIn_Company_Id__c))
)</errorConditionFormula>
    <errorDisplayField>LID__LinkedIn_Company_Id__c</errorDisplayField>
    <errorMessage>CompanyId should be a numeric value</errorMessage>
</ValidationRule>