force-app/main/default/objects/Contact/validationRules/Validation_for_New_Job_Account_check.validationRule-meta.xml
<ValidationRule>
    <fullName>Validation_for_New_Job_Account_check</fullName>
    <active>true</active>
    <description>User should not be allowed to enter a contact unless the Contact Type is Property Owner when using the New Job Visualforce page.</description>
    <errorConditionFormula>NOT(ISPICKVAL( Contact_Type__c , &apos;Property Owner&apos;)) &amp;&amp; Account.Name = null &amp;&amp; NOT(ISPICKVAL(IsLiveChat__c, &apos;Yes&apos;)) &amp;&amp; $Setup.rh2__PS_Settings__c.rh2__Run_Validation_Rule__c</errorConditionFormula>
    <errorMessage>Account cannot be null for this contact type.</errorMessage>
</ValidationRule>