force-app/main/default/objects/Contact/listViews/Bounced_Emails.listView-meta.xml
<ListView>
    <fullName>Bounced_Emails</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>IS_EMAIL_ADDRESS_BOUNCED</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Bounced Emails</label>
</ListView>