force-app/main/default/objects/Contact/listViews/Contact_with_No_Address.listView-meta.xml
<ListView>
    <fullName>Contact_with_No_Address</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTACT.ADDRESS2_STREET</field>
        <operation>equals</operation>
    </filters>
    <label>Contact with No Address</label>
</ListView>