force-app/main/default/objects/Contact/listViews/Go_Back_Safely_K_12.listView-meta.xml
<ListView>
    <fullName>Go_Back_Safely_K_12</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CONTACT.ADDRESS2_STREET</columns>
    <columns>CONTACT.ADDRESS2_CITY</columns>
    <columns>CONTACT.ADDRESS2_STATE</columns>
    <filterScope>Everything</filterScope>
    <label>Go Back Safely K-12</label>
    <sharedTo>
        <roleAndSubordinates>Business_Development_VP_HQ</roleAndSubordinates>
    </sharedTo>
</ListView>