force-app/main/default/objects/Contact/listViews/Maya_Condo_Association.listView-meta.xml
<ListView>
    <fullName>Maya_Condo_Association</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>Maya Condo Association</label>
</ListView>