force-app/main/default/objects/Contact/listViews/Unsubscribes.listView-meta.xml
<ListView>
    <fullName>Unsubscribes</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Email_Opt_Out_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTACT.EMAIL_OPT_OUT</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Unsubscribes</label>
    <sharedTo>
        <group>System_Admins</group>
    </sharedTo>
</ListView>